# sport-service

./: .flake8  .gitignore  README.md  TZ.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: check-application.yml
apps/account/: admin.py  djoser_email.py  serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_remove_profile_is_email.py  0003_profile_workout.py
apps/account/models/: profile.py
apps/history/: admin.py  exceptions.py  serializers.py  service.py  urls.py  views.py
apps/history/migrations/: 0001_initial.py  0002_alter_workouthistory_workout.py  0003_exercisehistory_exerciseapproaches.py  0004_exercisehistory_close_data_exercisehistory_open_data.py  0005_rename_close_data_exercisehistory_close_date_and_more.py  0006_rename_data_close_workouthistory_close_date_and_more.py  0007_remove_workouthistory_detail_info_and_more.py  0008_rename_number_approaches_exerciseapproaches_current_approach.py  0009_rename_exerciseapproaches_exerciseapproach.py
apps/history/models/: __init__.py  exercise_history.py  workout_history.py
apps/notification/: admin.py  service.py  tasks.py
apps/utils/: admin.py  serializers.py
apps/workout/: admin.py  permissions.py  serializers.py  urls.py  utils.py  views.py
config/: settings.py  urls.py  yasg.py
tests/test_account/: test_models.py
tests/test_history/: test_service.py
tests/test_notification/: test_service.py  test_tasks.py
tests/test_workout/: test_api.py  test_models.py
tests/tets_history/: test_service.py
(+21 files in other folders)
